--- a/KSkyBandQuery-C/KSkyBandQuery-C/Makefile
+++ b/KSkyBandQuery-C/KSkyBandQuery-C/Makefile
@@ -1,16 +1,16 @@
 cc=gcc
 exe=main
-obj=main.o BucketVector.o PointVector.o HashTable.o
+obj=main.o BucketList.o PointList.o HashTable.o
 $(exe):$(obj)
-	$(cc) -g -Wall -o $(exe) $(obj)
-main.o:main.c BucketVector.h PointVector.h 
-	$(cc) -c main.c
-BucketVector.o:BucketVector.c BucketVector.h
-	$(cc) -c BucketVector.c
-PointVector.o:PointVector.c PointVector.h
-	$(cc) -c PointVector.c
+    $(cc) -g -Wall -o $(exe) $(obj)
+main.o:main.c BucketList.h PointList.h
+    $(cc) -c main.c
+BucketList.o:BucketList.c BucketList.h
+    $(cc) -c BucketList.c
+PointList.o:PointList.c PointList.h
+    $(cc) -c PointList.c
 HashTable.o:HashTable.c HashTable.h
-	$(cc) -c HashTable.c
+    $(cc) -c HashTable.c
 clean:
-	rm -rf *.o
+    rm -rf *.o
 
