--- a/KSkyBandQuery-C/KSkyBandQuery-C/Makefile
+++ b/KSkyBandQuery-C/KSkyBandQuery-C/Makefile
@@ -1,16 +1,16 @@
 cc=gcc
-exe=main
-obj=main.o BucketList.o PointList.o HashTable.o
+exe=sky_query
+obj=sky_query.o sky_bucket_list.o sky_point_list.o sky_hashtable.o
 $(exe):$(obj)
 	$(cc) -g -Wall -o $(exe) $(obj)
-main.o:main.c BucketList.h PointList.h
-	$(cc) -c main.c
-BucketList.o:BucketList.c BucketList.h
-	$(cc) -c BucketList.c
-PointList.o:PointList.c PointList.h
-	$(cc) -c PointList.c
-HashTable.o:HashTable.c HashTable.h
-	$(cc) -c HashTable.c
+sky_query.o:sky_query.c sky_bucket_list.h sky_point_list.h
+	$(cc) -c sky_query.c
+sky_bucket_list.o:sky_bucket_list.c sky_bucket_list.h
+	$(cc) -c sky_bucket_list.c
+sky_point_list.o:sky_point_list.c sky_point_list.h
+	$(cc) -c sky_point_list.c
+sky_hashtable.o:sky_hashtable.c sky_hashtable.h
+	$(cc) -c sky_hashtable.c
 clean:
 	rm -rf *.o
 
